--- a/components/Accessories/Accessories.module.css
+++ b/components/Accessories/Accessories.module.css
@@ -1,34 +1,40 @@
 .accessories {
   box-sizing: border-box;
-  padding: 100px 7.5%;
-  position: relative;
   font-family: var(--fontPrimary);
-}
-
-.accessories::after {
-  bottom: 0;
-  left: 0;
-  content: "";
-  position: absolute;
-  border-top: 100px solid transparent;
-  border-left: 50vw solid var(--colorPrimary);
-  border-right: 50vw solid var(--colorPrimary);
-  border-bottom: 0 solid var(--colorPrimary);
-}
-
-.offer h1 {
-  color: var(--colorBlack);
-}
-
-.offer h1 span {
-  vertical-align: middle;
-}
-
-.accessories h1 {
   background-color: var(--colorPrimary);
-  border-radius: 6px;
-  padding: 6px;
-  width: max-content;
+  position: relative;
+}
+
+.accessoriesForeground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../public/ct_icon_black.png");
+  background-repeat: repeat;
+  background-size: 50px 50px;
+  opacity: 0.03;
+}
+
+.wave svg {
+  position: static;
+}
+
+.wave svg path {
+  fill: var(--colorBlack);
+}
+
+.accessoriesTitle {
+  text-align: center;
+}
+
+.accessoriesDescription {
+  margin-bottom: 50px;
+}
+
+.accessoriesSection {
+  padding: 10%;
 }
 
 .accessoriesList {
@@ -54,242 +60,15 @@
   column-gap: var(--grid-layout-gap);
 }
 
-.offerContainer {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.offerListContainer {
-  padding: 2.5%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-}
-
-.buildIcon {
-  font-size: 40px;
-}
-
-.phoneIcon {
-  font-size: 40px;
-}
-
-.offerList {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.offerListContainer li {
-  font-weight: bold;
-  margin-bottom: 15px;
-  background-color: var(--colorPrimary);
-  color: var(--colorBlack);
-  border-radius: 10px;
-  padding: 10px;
-  box-shadow: 2px 2px 5px 1px rgba(var(--colorPrimaryRGB), 0.5);
-}
-
-.offerList li::before {
-  font-family: "Material Icons";
-  display: inline-block;
-  margin-right: 1rem;
-  vertical-align: middle;
-}
-
-.accessoriesList li::before {
-  content: "\e32c";
-}
-
-.offerImages {
-  padding: 2.5%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.imageContainerWrapper {
-  position: relative;
-  height: 400px;
-  width: 100%;
-}
-
-.imageContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  position: absolute;
-}
-
-.offerImages img {
-  border-radius: 4px;
-  width: 100%;
-  height: 100%;
-  animation: levitate 4s ease-in-out infinite;
-}
-
-.offerImageWrapper {
-  position: relative;
-  padding: 2.5%;
-  box-sizing: border-box;
-  height: 400px;
-  max-width: 50%;
-}
-
-.offerImageWrapper::after {
-  position: absolute;
-  width: 90%;
-  height: 15px;
-  border-radius: 50%;
-  content: "";
-  bottom: 0;
-  left: 5%;
-}
-
-.accessoriesImageWrapper::after {
-  box-shadow: 0 45px 15px 0px rgba(0, 0, 0, 0.2);
-}
-
-@keyframes levitate {
-  0% {
-    transform: translatey(0px);
-  }
-  50% {
-    transform: translatey(-5px);
-  }
-  100% {
-    transform: translatey(0px);
-  }
-}
-
-.imageLabel {
-  text-align: center;
-  font-weight: bold;
-  background-color: var(--colorPrimary);
-  border-radius: 6px;
-  padding: 6px;
-  width: max-content;
-  margin: 60px 0 0;
-}
-
-.slideAnimationLeft {
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: all 800ms ease-in;
-}
-
-.slideAnimationRight {
-  opacity: 0;
-  transform: translateX(100%);
-  transition: all 800ms ease-in;
-}
-
-.hide {
-  opacity: 0;
-}
-
-.show {
-  opacity: 1;
-}
-
 @media (max-width: 480px) {
-  .accessories h1 {
-    align-self: center;
-  }
-
-  .offer h1 {
-    font-size: 28px;
-    margin: 0 0 5%;
-  }
-
-  .imageLabel {
-    font-size: 28px;
-  }
-
-  .offerListContainer {
-    width: 100%;
-  }
-
-  .offerListContainer li {
-    font-size: 20px;
-  }
-
-  .offerImages {
-    width: 100%;
-  }
-
-  .imageContainerWrapper {
-    height: 250px;
-  }
-
-  .offerImageWrapper {
-    height: 250px;
-  }
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  .accessories h1 {
-    align-self: center;
-  }
-  .offer h1 {
-    font-size: 30px;
-    margin: 0 0 5%;
-  }
-  .imageLabel {
-    font-size: 30px;
-  }
-  .offerListContainer {
-    width: 100%;
-  }
-  .offerListContainer li {
-    font-size: 22px;
-  }
-  .offerImages {
-    width: 100%;
-  }
 }
 
 /* dekstop */
 @media (min-width: 1280px) and (max-width: 1536px) {
-  .offer h1 {
-    font-size: 32px;
-    margin: 0 0 5%;
-  }
-  .imageLabel {
-    font-size: 32px;
-  }
-  .offerListContainer {
-    width: 50%;
-  }
-  .offerListContainer li {
-    font-size: 24px;
-  }
-  .offerImages {
-    width: 50%;
-  }
 }
 
 @media (min-width: 1537px) {
-  .offer h1 {
-    font-size: 40px;
-    margin: 0 0 5%;
-  }
-
-  .imageLabel {
-    font-size: 40px;
-  }
-
-  .offerListContainer {
-    width: 50%;
-  }
-  .offerListContainer li {
-    font-size: 24px;
-  }
-
-  .offerImages {
-    width: 50%;
-  }
 }
