--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -13,6 +13,14 @@
   object-fit: cover;
 }
 
+.wave {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+}
+
 .foreground {
   z-index: 10;
   position: absolute;
