--- a/components/Service/ServiceItem/ServiceItem.module.css
+++ b/components/Service/ServiceItem/ServiceItem.module.css
@@ -3,8 +3,7 @@
   background-color: var(--colorWhite);
   border-radius: 999px;
   position: relative;
-  height: 50px;
-  padding: 11px 50px;
+  padding: 11px 11px 11px 50px;
   font-family: var(--fontPrimary);
 }
 
@@ -27,15 +26,15 @@
 }
 
 .ServiceItemIcon {
-  font-size: 28px;
-  line-height: 28px;
+  font-size: 24px;
+  line-height: 24px;
   /* line-height: 24px; */
   vertical-align: middle;
 }
 
 .ServiceItemTitle {
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 16px;
+  line-height: 24px;
   vertical-align: middle;
   margin-left: 10px;
   font-weight: bold;
