--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,14 +3,7 @@
   position: relative;
   display: flex;
   align-items: center;
-}
-
-.jumbotron .background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: blur(3px);
-  object-fit: cover;
+  background-color: var(--colorBlack);
 }
 
 .wave {
@@ -26,15 +19,6 @@
   position: absolute;
 }
 
-.jumbotron::after {
-  top: 0;
-  position: absolute;
-  content: "";
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(var(--colorBlackRGB), 0.7);
-}
-
 .jumbotronContainer {
   position: relative;
   z-index: 100;
@@ -42,11 +26,11 @@
 
 .jumbotronCard {
   margin-left: 5%;
+  margin-bottom: 5%;
   z-index: 100;
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding: 100px 0;
 }
 
 .jumbotronTitle {
@@ -85,6 +69,9 @@
 
 .jumbotronDetails {
   position: relative;
+  padding: var(--margin-xxl);
+  display: grid;
+  gap: var(--margin-xxl);
 }
 
 .jumbotronDetails::after {
@@ -108,14 +95,9 @@
 }
 
 .jumbotronDescription {
-  font-size: 40px;
-  margin: 50px 0 50px 5%;
   color: var(--colorWhite);
-  font-family: var(--fontPrimary);
-}
-
-.jumbotronDescription p {
-  margin: 0 0 10px;
+  display: grid;
+  gap: var(--margin-s);
 }
 
 .jumbotronDescriptionBounceSpan {
@@ -159,7 +141,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0 5%;
+  /* margin: 0 5%; */
 }
 
 .floatingButtonWrapper {
@@ -176,12 +158,10 @@
     min-height: 100vh;
   }
   .jumbotronTitle {
-    font-size: 32px;
-    margin: 20px 0 20px 5%;
+    /* margin: 20px 0 20px 5%; */
   }
   .jumbotronDescription {
-    font-size: 24px;
-    margin: 20px 0 20px 5%;
+    /* margin: 20px 0 20px 5%; */
   }
   .jumbotronButtons {
     flex-direction: column-reverse;
@@ -192,12 +172,10 @@
 /* tablet horizontal */
 @media (min-width: 768px) and (max-width: 1279px) and (max-height: 800px) {
   .jumbotronTitle {
-    font-size: 32px;
-    margin: 20px 0 20px 5%;
+    /* margin: 20px 0 20px 5%; */
   }
   .jumbotronDescription {
-    font-size: 30px;
-    margin: 30px 0 30px 5%;
+    /* margin: 30px 0 30px 5%; */
   }
   .jumbotronButtons {
     flex-direction: column-reverse;
@@ -210,12 +188,10 @@
     min-height: 100vh;
   }
   .jumbotronTitle {
-    font-size: 32px;
-    margin: 20px 0 20px 5%;
+    /* margin: 20px 0 20px 5%; */
   }
   .jumbotronDescription {
-    font-size: 30px;
-    margin: 30px 0 30px 5%;
+    /* margin: 30px 0 30px 5%; */
   }
   .jumbotronButtons {
     flex-direction: column-reverse;
@@ -228,13 +204,12 @@
     min-height: 100vh;
   }
   .jumbotronTitle {
-    font-size: 40px;
-    margin: 30px 0 30px 5%;
+    /* margin: 30px 0 30px 5%; */
   }
 
   .jumbotronDescription {
-    font-size: 30px;
-    margin: 30px 0 30px 5%;
+    /* font-size: 30px; */
+    /* margin: 30px 0 30px 5%; */
   }
   .jumbotronButtons {
     flex-direction: column-reverse;
@@ -248,13 +223,11 @@
     min-height: 100vh;
   }
   .jumbotronTitle {
-    font-size: 70px;
-    margin: 40px 0 40px 5%;
+    /* margin: 40px 0 40px 5%; */
   }
 
   .jumbotronDescription {
-    font-size: 35px;
-    margin: 40px 0 40px 5%;
+    /* margin: 40px 0 40px 5%; */
   }
 }
 
@@ -264,12 +237,11 @@
   }
 
   .jumbotronTitle {
-    font-size: 75px;
-    margin: 50px 0 50px 5%;
+    /* font-size: 75px; */
+    /* margin: 50px 0 50px 5%; */
   }
 
   .jumbotronDescription {
-    font-size: 40px;
-    margin: 50px 0 50px 5%;
+    /* margin: 50px 0 50px 5%; */
   }
 }
