--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -1,21 +1,15 @@
 .map {
   position: relative;
-  background-color: transparent;
   padding: 0 0 100px;
-  /* filter: invert(90%) hue-rotate(180deg); */
 }
 
-/* TODO: add maps */
+/* TODO: add map integration from google api */
 
 .map::after {
   bottom: 0;
   left: 0;
   content: "";
   position: absolute;
-  /* border-top: 100px solid transparent;
-  border-left: 50vw solid var(--colorPrimary);
-  border-right: 50vw solid var(--colorPrimary);
-  border-bottom: 0 solid var(--colorPrimary); */
 }
 
 .mapTitlewrapperOuter {
@@ -30,7 +24,6 @@
 }
 
 .mapTitle {
-  font-family: var(--fontPrimary);
   display: inline-block;
   text-align: center;
   color: var(--colorBlack);
@@ -40,17 +33,23 @@
 }
 
 .maps {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   padding: 5% 10%;
-  box-sizing: border-box;
+  box-sizing: border-box; */
+
+  display: grid;
+  padding: 5% 10%;
+  gap: 5%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 600px));
 }
 
 .mapWrapper {
   overflow: hidden;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .mapIframeHeader {
@@ -87,7 +86,7 @@
     font-size: 28px;
   }
   .mapWrapper {
-    width: 100%;
+    /* width: 100%; */
     padding: 5% 0;
   }
   .mapWrapper iframe {
@@ -128,7 +127,7 @@
     font-size: 32px;
   }
   .mapWrapper {
-    width: 100%;
+    /* width: 100%; */
     padding: 2.5%;
   }
   .mapWrapper iframe {
@@ -148,7 +147,7 @@
     font-size: 32px;
   }
   .mapWrapper {
-    width: 100%;
+    /* width: 100%; */
     padding: 2.5%;
   }
   .mapWrapper iframe {
