Continue implementation of service cards

--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -21,6 +21,12 @@
   aspect-ratio: 1440/320;
 }
 
+.serviceList {
+  display: grid;
+  gap: var(--margin-xxl);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
 .firstSectionContainer,
 .secondSectionContainer {
   display: flex;
