--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -3,263 +3,37 @@
   position: relative;
   font-family: var(--fontPrimary);
   z-index: 100;
+  background-color: var(--colorBlack);
 }
 
 .serviceContainer {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 10%;
-}
-
-.serviceMain {
-  background-color: var(--colorPrimary);
-}
-
-.contentDivider {
-  width: 100%;
-  background: linear-gradient(var(--colorPrimary), var(--colorBlack));
-  aspect-ratio: 1440/320;
+  padding: 100px 5% 0;
+  display: grid;
+  gap: var(--margin-xl);
 }
 
 .serviceList {
   display: grid;
   gap: var(--margin-xxl);
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-}
-
-.firstSectionContainer,
-.secondSectionContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2.5%;
-}
-
-/* negative margin */
-.firstSectionContainer {
-  /* margin: 0 0 20px; */
-}
-
-/* negative margin */
-.secondSectionContainer {
-}
-
-.serviceSectionItem {
-  flex: 1;
-  box-sizing: border-box;
-  margin-bottom: 50px;
-}
-
-.serviceImageContainer {
-  width: 240px;
-  height: 320px;
-  margin: auto;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .serviceTitle {
-  color: var(--colorBlack);
-}
-
-.serviceAdvantagesContainer {
-  display: flex;
-  width: 100%;
-  gap: 2.5%;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.serviceAdvantageWrapper {
-  min-width: 150px;
   text-align: center;
-}
-
-.serviceAdvantageText {
-  margin: 0.5rem;
-}
-
-.serviceAdvantageIcon {
-  font-size: 60px;
-}
-
-.serviceCallButton {
-  width: 100%;
-}
-
-.serviceImageLabelWrapper {
-  position: relative;
-  width: 100%;
-  height: 50px;
-}
-
-.serviceImageLabel {
-  text-align: center;
-  position: absolute;
-  font-weight: bold;
   background-color: var(--colorPrimary);
-  border-radius: 6px;
-  padding: 6px;
-  width: 100%;
-  /* margin: 60px 0 0; */
-  animation-duration: 8000ms;
-  animation-iteration-count: infinite;
+  border-radius: 4px;
+  width: max-content;
+  justify-self: center;
+  text-align: center;
+  color: var(--colorBlack);
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  padding: 6px 24px;
+  font-family: var(--fontPrimary);
 }
 
-.serviceListItem {
-  margin-bottom: 1.5rem;
-}
-
-@keyframes opacityFromOut {
-  0% {
-    opacity: 0;
-  }
-  37.5% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  87.5% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes opacityFromIn {
-  0% {
-    opacity: 1;
-  }
-  37.5% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  87.5% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@media (min-width: 300px) {
-  .service {
-    /* padding: 0% 10%; */
-  }
-}
-
-@media (min-width: 300px) {
-  .service h1 {
-    align-self: center;
-  }
-
-  .offer h1 {
-    font-size: 28px;
-    margin: 0 0 5%;
-  }
-
-  .imageLabel {
-    font-size: 28px;
-  }
-
-  .offerListContainer {
-    width: 100%;
-  }
-
-  .offerListContainer li {
-    font-size: 20px;
-  }
-
-  .offerImages {
-    width: 100%;
-  }
-
-  .imageContainerWrapper {
-    /* height: 250px; */
-  }
-
-  .offerImageWrapper {
-    height: 250px;
-  }
-
-  .serviceListContainer {
-    order: 1;
-  }
-
-  .serviceImages {
-    order: 2;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1279px) {
-  .service h1 {
-    align-self: center;
-  }
-  .offer h1 {
-    font-size: 30px;
-    margin: 0 0 5%;
-  }
-  .imageLabel {
-    font-size: 30px;
-  }
-  .offerListContainer {
-    width: 100%;
-  }
-  .offerListContainer li {
-    font-size: 22px;
-  }
-  .offerImages {
-    width: 100%;
-  }
-
-  .serviceListContainer {
-    order: 1;
-  }
-  .serviceImages {
-    order: 2;
-  }
-}
-
-/* dekstop */
-@media (min-width: 1280px) and (max-width: 1536px) {
-  .offer h1 {
-    font-size: 32px;
-    margin: 0 0 5%;
-  }
-  .imageLabel {
-    font-size: 32px;
-  }
-  .offerListContainer {
-    width: 50%;
-  }
-  .offerListContainer li {
-    font-size: 24px;
-  }
-  .offerImages {
-    width: 50%;
-  }
-}
-
-@media (min-width: 1537px) {
-  .offer h1 {
-    font-size: 40px;
-    margin: 0 0 5%;
-  }
-
-  .imageLabel {
-    font-size: 40px;
-  }
-
-  .offerListContainer {
-    width: 50%;
-  }
-  .offerListContainer li {
-    font-size: 24px;
-  }
-
-  .offerImages {
-    width: 50%;
-  }
+.serviceAdnotation {
+  color: var(--colorPrimary);
 }
