--- a/components/Accessories/Accessories.module.css
+++ b/components/Accessories/Accessories.module.css
@@ -43,8 +43,16 @@
   letter-spacing: 0.5px;
 }
 
-.accessoriesList {
+.embla {
+  overflow: hidden;
+}
+
+.emblaContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: var(--margin-xxl);
+  grid-auto-flow: column;
+  grid-auto-columns: 300px;
+}
+
+.emblaSlide {
+  padding-left: var(--margin-xl);
 }
