Mobile style fixes

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -157,6 +157,9 @@
   .jumbotron {
     min-height: 100vh;
   }
+  .jumbotronCard {
+    margin-top: 35px;
+  }
   .jumbotronButtons {
     flex-direction: column-reverse;
     align-items: flex-start;
