--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -28,7 +28,7 @@
   font-weight: lighter;
   letter-spacing: 0.05em;
   margin: 0;
-  padding: 0 5px 3px;
+  padding: 3px 5px 3px;
   box-sizing: border-box;
   word-wrap: break-word;
 }
