--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,6 @@ html {
 button {
   padding: 0;
   border: none;
-  outline: none;
   z-index: 500;
   background-color: transparent;
 }
@@ -99,28 +98,38 @@ tint - add white
   --margin-xxl: 2.5rem;
 }
 
-h1 {
+h1,
+.h1 {
   font: var(--h1);
 }
-h2 {
+h2,
+.h2 {
   font: var(--h2);
 }
-h3 {
+h3,
+.h3 {
   font: var(--h3);
 }
-h4 {
+h4,
+.h4 {
   font: var(--h4);
 }
-h5 {
+h5,
+.h5 {
   font: var(--h5);
 }
-h6 {
+h6,
+.h6 {
   font: var(--h6);
 }
-strong {
+
+strong,
+.strong {
   font: var(--big);
 }
-p {
+
+p,
+.p {
   font: var(--p);
 }
 
@@ -138,6 +147,17 @@ p {
   text-align: center;
   letter-spacing: 0.5px;
   font-family: var(--fontPrimary);
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 
 @media (prefers-color-scheme: light) {
