--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -161,7 +161,7 @@
     margin-top: 35px;
   }
   .jumbotronButtons {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
     gap: var(--margin-s);
   }
@@ -170,7 +170,7 @@
 /* tablet horizontal */
 @media (min-width: 768px) and (max-width: 1279px) and (max-height: 800px) {
   .jumbotronButtons {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
     gap: var(--margin-s);
   }
@@ -181,7 +181,7 @@
     min-height: 100vh;
   }
   .jumbotronButtons {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
     gap: var(--margin-s);
   }
@@ -192,7 +192,7 @@
     min-height: 100vh;
   }
   .jumbotronButtons {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
     gap: var(--margin-s);
   }
