Add accessory promotion

--- a/components/News/News.module.css
+++ b/components/News/News.module.css
@@ -6,8 +6,9 @@
   max-height: calc(100vh - 70px);
 }
 
-/* .newsTitle {
-} */
+.newsTitle {
+  margin-bottom: var(--margin-xxl);
+}
 
 .newsPhotoWrapper {
   position: relative;
